<resources>
    <string name="app_name">Pecki</string>
    <string name="ic_map_text">Map</string>
    <string name="ic_location_text">Locations</string>
    <string name="ic_settings_text">Settings</string>
    <string name="ic_details_text">Details</string>

    <string name="positive_text">Yes</string>
    <string name="negative_text">No</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>

    <!-- Preference -->
    <string name="units_header">Units</string>
    <string name="theme_header">Theme</string>
    <string name="options_header">Options</string>
    <string name="units_title">Units</string>
    <string name="measurement_system_title">Measurement system</string>
    <string name="area_unit_title">Area unit</string>
    <string name="distance_unit_title">Distance unit</string>
    <string name="app_language">Application language</string>
    <string name="choose_language">Choose language</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Use dark theme</string>
    <string name="theme_summary_on">Application dark theme in use</string>
    <string name="theme_summary_off">Application light theme in use</string>

    <string name="precision_icon_title">Show precision icon</string>
    <string name="precision_icon_summary_on">Precision icon on map turned on</string>
    <string name="precision_icon_summary_off">Precision icon on map turned off</string>
    <string name="new_surface_create_alert">Give a name for new surface</string>


    <!--  -->
    <string name="add_point_button_text">Add</string>
    <string name="end_button_text">End</string>
    <string name="reset_button_text">Reset</string>
    <string name="save_button_text">Save</string>
    <string name="items_amount">Items:</string>
    <string name="import_button_text">Import</string>
    <string name="export_button_text">Export</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="surface_area">Area</string>
    <string name="surface_edit">Surface edit</string>
    <string name="surface_delete">Surface delete</string>
    <string name="surface_main_image">Surface image</string>

    <!-- Location Details -->
    <string name="details_surface">Surface</string>
    <string name="details_title">Location details</string>
    <string name="details_id">Id</string>
    <string name="details_latitude">Latitude</string>
    <string name="details_longitude">Longitude</string>
    <string name="details_altitude">Altitude</string>
    <string name="details_accuracy">Accuracy</string>
    <string name="details_reference">Reference location</string>
    <string name="details_default">n/a</string>

    <!-- Marker Popups -->
    <string name="marker_delete_popup">Delete</string>

    <string name="surface_name">Surface name</string>
    <string name="go_back_button">Go back button</string>
    <string name="name_already_exist">This name already exist!</string>
    <string name="minimum_distance">Distance must be at least</string>
    <string name="location_delete_confirmation_title">Delete selected localization</string>
    <string name="location_delete_confirmation_message">Are you sure you want to delete this location?</string>
    <string name="surface_create_confirmation_title">New surface creating</string>
    <string name="surface_create_confirmation_message">Did you save all required location points?</string>
    <string name="surface_delete_confirmation_title">Delete selected surface</string>
    <string name="surface_delete_confirmation_message">Are you sure you want to delete this surface?</string>
</resources>