<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_header">
        <SwitchPreferenceCompat
            app:key="@string/theme_title"
            app:summaryOff="@string/theme_summary_off"
            app:summaryOn="@string/theme_summary_on"
            app:title="@string/theme_title" />

    </PreferenceCategory>

    <ListPreference
        android:key="language"
        android:title="@string/app_language"
        android:summary="@string/choose_language"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values"
        android:defaultValue="pl" />

    <PreferenceCategory app:title="@string/units_header">

        <ListPreference
            app:key="@string/measurement_system_title"
            app:title="@string/measurement_system_title"
            app:defaultValue="metric"
            app:entries="@array/measurement_system_entries"
            app:entryValues="@array/measurement_system_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/area_unit_title"
            app:defaultValue="m\u00B2"
            app:entries="@array/area_unit_entries"
            app:entryValues="@array/area_unit_entries"
            app:title="@string/area_unit_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="@string/distance_unit_title"
            app:title="@string/distance_unit_title"
            app:defaultValue="m"
            app:entries="@array/distance_unit_entries"
            app:entryValues="@array/distance_unit_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/options_header">
        <SwitchPreferenceCompat
            app:key="@string/precision_icon_title"
            android:defaultValue="true"
            app:summaryOff="@string/precision_icon_summary_off"
            app:summaryOn="@string/precision_icon_summary_on"
            app:title="@string/precision_icon_title" />

    </PreferenceCategory>

</PreferenceScreen>
