<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/id_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_id"
            android:theme="@style/LocationDetailEntryAppearance" />

        <TextView
            android:id="@+id/id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_entry"
            android:padding="10dp"
            android:text="@string/details_default"
            android:theme="@style/LocationDetailValueAppearance" />


        <TextView
            android:id="@+id/latitude_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_value"
            android:paddingTop="20dp"
            android:text="@string/details_latitude"
            android:theme="@style/LocationDetailEntryAppearance" />

        <TextView
            android:id="@+id/latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitude_entry"
            android:padding="10dp"
            android:text="@string/details_default"
            android:theme="@style/LocationDetailValueAppearance" />

        <TextView
            android:id="@+id/longitude_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitude_value"
            android:paddingTop="20dp"
            android:text="@string/details_longitude"
            android:theme="@style/LocationDetailEntryAppearance" />

        <TextView
            android:id="@+id/longitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitude_entry"
            android:padding="10dp"
            android:text="@string/details_default"
            android:theme="@style/LocationDetailValueAppearance" />

        <TextView
            android:id="@+id/accuracy_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitude_value"
            android:paddingTop="20dp"
            android:text="@string/details_accuracy"
            android:theme="@style/LocationDetailEntryAppearance" />

        <TextView
            android:id="@+id/accuracy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accuracy_entry"
            android:padding="10dp"
            android:text="@string/details_default"
            android:theme="@style/LocationDetailValueAppearance" />

    </RelativeLayout>

</RelativeLayout>