<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/marker_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/precisionLayout" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/surfaceNameButton"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/precisionButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/precision_circle"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:text="@string/details_default"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPointEndLayer"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addPointButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:text="@string/add_point_button_text"
            android:textColor="#ffffff"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/stopAddingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/mybutton"
            android:text="@string/end_button_text"
            android:textColor="#ffffff"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveResetLayer"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:text="@string/reset_button_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/mybutton"
            android:text="@string/save_button_text"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
